--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/spaghetti.html">Spaghetti</a>
+
+        <ul>
+            <li><a href="recipes/spaghetti.html">Spaghetti</a></li>
+            <li><a href="recipes/burrito.html">Burrito</a></li>
+            <li><a href="recipes/curriedbeef.html">Curried Beef</li>
+        </ul>
+       
     </body>
 </html>
